client/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Staatliches&display=swap");

:root {
	--black: #1f1f1f;
	--gray-100: #303030;
	--gray-200: #3d3d3d;
	--gray-600: #a6a6a6;
	--gray-800: hsl(0, 0%, 80%);
	--slate-600: #9da6af;
	--slate-500: #6c7884;
	--slate-400: #3d4d5c;
	--slate-300: hsl(209, 20%, 25%);
	--slate-200: #1b2128;
	--slate-100: #141a1f;
	--bronze-400: #dfc59f;
	--bronze-500: #d1b487;
	--gold-500: #e0c673;
	--gold-700: #ffd95d;
}

body {
	font-family: "Lato", sans-serif;
	background-color: var(--gray-200);
	background-image: linear-gradient(
		90deg,
		var(--slate-200) 25%,
		var(--slate-100) 25%,
		var(--slate-100) 50%,
		var(--slate-200) 50%,
		var(--slate-200) 75%,
		var(--slate-100) 75%,
		var(--slate-100) 100%
	);
	background-size: 8rem 8rem;
	color: #fff;
	overflow-x: hidden;
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

h1,
h2 {
	font-family: "Staatliches", cursive;
	letter-spacing: 0.04em;
}

p {
	line-height: 1.5;
}

main {
	min-height: calc(100vh - 6rem - 2px);
	max-width: 1440px;
	margin: 0 auto;
	position: relative;
	background-image: linear-gradient(
		45deg,
		var(--gray-200) 25%,
		var(--gray-100) 25%,
		var(--gray-100) 50%,
		var(--gray-200) 50%,
		var(--gray-200) 75%,
		var(--gray-100) 75%,
		var(--gray-100) 100%
	);
	padding: 0 0.5rem;
	background-size: 56.57px 56.57px;
}

main h1 {
	font-size: 3rem;
	font-weight: 900;
	text-align: center;
	margin: 0;
}

a {
	text-decoration: none;
	color: #fff;
}

@media screen and (min-width: 1440px) {
	main::before,
	main::after {
		content: "";
		position: absolute;
		top: 0;
		height: 100%;
		background-size: 100% 100%;
		z-index: -1;
	}

	main::before {
		width: 0.5rem;
		background-color: #fff;
		left: -0.5rem;
	}

	main::after {
		width: 2.5rem;
		right: -2.5rem;
		background-image: linear-gradient(
			90deg,
			#ffffff 20%,
			transparent 20%,
			transparent 40%,
			#ffffff 40%,
			#ffffff 60%,
			transparent 60%,
			transparent 80%,
			#ffffff 80%,
			#ffffff 100%
		);
	}
}

.title {
	font-size: 4rem;
	letter-spacing: 4px;
	padding: 1.75rem 0 2.5rem 0;
}

.subheading {
	font-size: 3rem;
	letter-spacing: 4px;
	padding: 1.5rem 0;
}

.slant {
	width: 100%;
	height: 1.25rem;
	fill: var(--gold-500);
	display: block;
}

.slant.small {
	height: 0.75rem;
}

.row {
	display: flex;
	flex-direction: row;
}

@media screen and (min-width: 960px) {
	.title {
		font-size: 5rem;
	}
}

/* scrollbar */

::-webkit-scrollbar {
	width: 10px;
}

::-webkit-scrollbar-track {
	background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
	background: #888;
}

::-webkit-scrollbar-thumb:hover {
	background: #555;
}

/*
	Home Page
*/

#home {
	isolation: isolate;
	padding: 0 1rem;
}

.home-header {
	width: 100%;
	max-width: 1440px;
	margin: 0 auto;
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	isolation: isolate;
}

.welcome-header {
	position: absolute;
	top: 0;
	left: 0;
	padding-top: 2rem;
	width: 100%;
	height: 100%;
	z-index: -1;
	padding: 0 2rem;
}

.latest-project {
	padding: 4rem 0 2rem 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.botan-img-container {
	display: flex;
	justify-content: center;
	position: relative;
	margin-top: 2rem;
	margin-right: 1rem;
}

.botan-img {
	object-fit: contain;
	width: 100%;
	mix-blend-mode: color;
	animation: swing 1.5s cubic-bezier(0.3, 0.05, 0.3, 1) infinite alternate;
}

@keyframes swing {
	0% {
		transform: translateX(0rem) rotate(0deg);
	}
	100% {
		transform: translateX(0.75rem) rotate(2deg);
	}
}

.welcome-text-wrapper {
	margin: 2rem auto;
	width: clamp(35ch, 100%, 55ch);
}

.welcome-text {
	color: var(--black);
	background: var(--gold-500);
	padding: 1rem;
	width: 100%;
}

.welcome-text h2 {
	font-size: 2rem;
	font-weight: 600;
	margin-top: 0;
	margin-bottom: 0.25em;
}

.welcome-text p {
	margin: 0;
	font-size: 1.4rem;
}

@media screen and (min-width: 960px) {
	.home-header {
		flex-direction: row-reverse;
	}
	.botan-img-container {
		justify-content: right;
	}
	.welcome-text-wrapper {
		margin: auto 2rem auto 0;
	}
}

/*
	Projects Page
*/

#projects {
	position: relative;
	isolation: isolate;
}

.projects-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 0 2rem 2.5rem 2rem;
}

.project {
	display: flex;
	flex-direction: column;
	margin: 0 1rem 4rem 1rem;
	position: relative;
	isolation: isolate;
	max-width: 50rem;
	width: 100%;
	padding: 2rem;
	border-radius: 0.5rem;
	overflow: hidden;
	border: 2px solid var(--bronze-500);
	transition: border 350ms ease-out;
}

.project:hover {
	border: 2px solid #fff;
}

.project-heading {
	width: max-content;
	height: max-content;
}

.project img {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	z-index: -2;
	filter: brightness(0.5);
	transition: filter 350ms ease-out, transform 350ms ease-out;
}

.project:hover img {
	filter: brightness(0.4);
	transform: scale(1.05);
}

.project h2 {
	font-family: "Lato", sans-serif;
	font-size: 2rem;
	font-weight: 900;
	padding-bottom: 0.2rem;
	position: relative;
}

.project h2::after {
	content: "";
	position: absolute;
	bottom: -0.1rem;
	left: 0;
	width: 100%;
	height: 0.15rem;
	background-color: var(--bronze-500);
	margin-top: 0.5rem;
	transition: transform 100ms ease-out;
}

.project:hover h2::after {
	transform: translateY(0.1rem);
}

.project-body {
	display: flex;
	flex-direction: column-reverse;
	padding-right: 1rem;
	overflow: hidden;
}

.project-desc {
	padding: 0.5rem;
	width: 100%;
}

@media screen and (min-width: 960px) {
	.project-body {
		flex-direction: row;
	}
}

/*
	Anniversary Page
*/

#anniversary {
	display: flex;
	flex-direction: column;
}

#anniversary_iframe {
	flex: 1;
	width: 100%;
	height: 100vh;
	border: none;
	display: block;
}

/*
	SSRB World Page
*/

#map {
	position: relative;
	display: grid;
	min-height: calc(100vh - 6rem - 2px);
	width: 100%;
}

.map-sidebar-toggle {
	position: fixed;
	bottom: 1rem;
	right: 1rem;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 2.5rem;
	height: 2.5rem;
	border: none;
	background: var(--gray-200);
	border-radius: 999px;
	border: 2px solid var(--bronze-500);
	cursor: pointer;
	z-index: 2;
}

.map-sidebar-toggle svg {
	transition: transform 350ms ease-out;
}

.map-sidebar-toggle__close {
	transform: rotate(180deg);
}

.map-sidebar {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: var(--gray-200);
	overflow-y: scroll;
	transform: translateX(-100%);
	transition: transform 350ms ease-out;
}

.map-sidebar.open {
	transform: translateX(0);
}

.map-sidebar-header {
	padding: 0.5rem;
	background: var(--gray-100);
}

.map-sidebar-header-title {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.map-hint {
	margin-top: 0;
	font-style: italic;
	color: var(--gray-600);
}

.map-help-btn {
	background: transparent;
	border: none;
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: pointer;
	margin-left: 0.5rem;
}

.map-sidebar-content {
	padding: 0.5rem 1rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.map-location {
	font-family: "Staatliches", cursive;
	font-size: 1.75rem;
	letter-spacing: 3px;
	margin: 0.25em 0 1.5rem 0;
	align-self: flex-start;
}

.map-card {
	display: flex;
	flex-direction: column;
	background: var(--bronze-500);
	color: var(--black);
	border: var(--gold-700) solid 2px;
	border-radius: 0.5rem;
	box-shadow: 0 0.25rem 1rem #1f1f1faa;
	overflow: hidden;
	width: 100%;
	flex-shrink: 0;
	margin-bottom: 2rem;
	max-width: 45ch;
}

.map-card-img {
	width: 100%;
	object-fit: contain;
}

.map-card-body {
	border-top: #fff solid 2px;
	padding: 0.5rem;
}

.map-card-body h5 {
	font-size: 1.25rem;
	margin: 0.5rem 0;
}

@media screen and (min-width: 960px) {
	#map {
		grid-template-columns: minmax(45ch, 25%) 1fr;
		grid-template-rows: none;
		height: calc(100vh - 6rem - 2px);
	}
	.map-sidebar {
		position: static;
		transform: none;
		order: unset;
		height: calc(100vh - 6rem - 2px);
	}
	.map-sidebar-header {
		padding: 0.5rem 2rem;
	}
	.map-sidebar-content {
		padding: 0.5rem 2rem;
	}
	.map-sidebar-toggle {
		display: none;
	}
}

#tw_iframe {
	flex: 1;
	width: 100%;
	height: 100vh;
	border: none;
	display: block;
}

/*
	videos page
*/

.player-wrapper {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	max-width: 75rem;
	margin: auto;
	aspect-ratio: 16/9;
}

@supports not (aspect-ratio: 16/9) {
	.player-wrapper {
		height: 0;
		padding-bottom: 56.25%;
		min-height: 45vh;
	}
}

/* 
	about page
*/

.credits {
	display: flex;
	flex-direction: column;
	max-width: 42rem;
	margin: auto;
	background: var(--slate-300);
	border-radius: 0.5rem;
	border: var(--gold-700) solid 2px;
	padding: 1.5rem 1rem;
}

.credits-body {
	margin: 1rem 0;
	display: grid;
	grid-template-columns: 1fr;
	gap: 1rem;
}

.credits h2 {
	margin: 0 0 1.5rem 0;
	padding: 0;
}

.credits-body h4 {
	font-size: 1.75rem;
	margin: 0 0 1rem 0;
}

.credits-body ul {
	margin: 0;
	padding-left: 1rem;
	list-style: none;
}

.credits-body ul li {
	font-size: 1.1rem;
	margin: 0.5rem 0;
}

.credits-footer {
	font-size: 1rem;
	font-style: italic;
	color: var(--gray-800);
}

@media screen and (min-width: 960px) {
	.credits-body {
		grid-template-columns: 1fr 1fr;
	}
}

/*
	404 page
*/

#construction {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.button_404 {
	background-color: var(--slate-300);
	border-radius: 0.5rem;
	border: 2px solid var(--gold-500);
	color: white;
	padding: 0.75rem 1.5rem;
	text-align: center;
	font-weight: bold;
	cursor: pointer;
}

.cones_404 {
	width: clamp(10rem, 50%, 35rem);
}

